pkg/ingress/kube/gateway/istio/testdata/reference-policy-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: higress-system
spec:
  addresses:
  - value: higress-gateway
    type: Hostname
  gatewayClassName: higress
  listeners:
  - name: simple
    hostname: "*.domain.example"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-service
  namespace: service
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: higress-system
  to:
  - group: ""
    kind: Service
    name: my-svc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http
  namespace: higress-system
spec:
  parentRefs:
  - name: gateway
    namespace: higress-system
  hostnames: ["simple.domain.example"]
  rules:
  - backendRefs:
    - name: my-svc
      namespace: service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-not-allowed
  namespace: higress-system
spec:
  parentRefs:
  - name: gateway
    namespace: higress-system
  hostnames: ["simple2.domain.example"]
  rules:
  - backendRefs:
    - name: my-svc
      namespace: service
      port: 80
      weight: 1
    - name: httpbin
      namespace: default
      port: 80
      weight: 1
